@@ -32,8 +32,9 @@
 #import <KWQTextStorage.h>
 #import <KWQTextContainer.h>
 
-
-#define ROUND_TO_INT(f) ((int)rint((f)))
+#define FLOOR_TO_INT(x) (int)(floor(x))
+#define ROUND_TO_INT(x) (int)(((x) > (floor(x) + .5)) ? ceil(x) : floor(x))
+//#define ROUND_TO_INT(f) ((int)(rint(f)))
 const float LargeNumberForText = 1.0e7;
 
 
@@ -250,13 +251,21 @@ QFontMetrics::~QFontMetrics()
 }
 
 
+int QFontMetrics::baselineOffset()
+{
+    return ascent();
+}
+
 int QFontMetrics::ascent() const
 {
-    // Qt seems to use [font defaultLineHeightForFont] + [font descender] instead
-    // of what seems more natural [font ascender].
-    // Remember that descender is negative. 
-    //return ROUND_TO_INT([data->font defaultLineHeightForFont] + [data->font descender]);
     return ROUND_TO_INT([data->font ascender]);
+}
+
+
+
+int QFontMetrics::descent() const
+{
+    return ROUND_TO_INT(-[data->font descender]);
 }
 
 
@@ -264,9 +273,7 @@ int QFontMetrics::height() const
 {
     // According to Qt documentation: 
     // "This is always equal to ascent()+descent()+1 (the 1 is for the base line)."
-    // However, the [font defaultLineHeightForFont] seems more appropriate.
-    //return ROUND_TO_INT([data->font defaultLineHeightForFont]);
-    return ROUND_TO_INT([data->font ascender] - [data->font descender] + 1);
+    return ascent() + descent() + 1;
 }
 
 
@@ -298,12 +305,6 @@ int QFontMetrics::width(const QString &qstring, int len) const
         string = QSTRING_TO_NSSTRING (qstring);
     int stringWidth = ROUND_TO_INT([data->info rectForString: string].size.width);
     return stringWidth;
-}
-
-
-int QFontMetrics::descent() const
-{
-    return -ROUND_TO_INT([data->font descender]);
 }
 
 
